# sfst

./: .gitignore  CMakeLists.txt  MANIFEST.in  README  README.md  pyproject.toml  setup.py
.github/workflows/: clang-format-check.yml  clang-tidy.yml  cmake.yml  codeql-analysis.yml  pip.yml  wheels.yml
data/SMOR/: smor.fst
data/easy/: easy.fst
doc/: Makefile  SFST-Manual.tex  SFST-Tutorial.tex  bibliography.bib  transducer.fig
python/: CMakeLists.txt  README.md  pybind11.cmake  setup.py  sfst.cpp
python/tests/: test.py
rust/: Cargo.toml  README.md  build.rs
rust/src/: lib.rs  main.rs  sfst_wrapper.cpp  sfst_wrapper.h
src/: CMakeLists.txt  Socket.h  alphabet.C  alphabet.cpp  alphabet.h  basic.cpp  basic.h  compact.cpp  compact.h  default-scanner.C  default-scanner.ll  determinise.C  determinise.cpp  fst-compact.cpp  fst-compare.cpp  fst-compiler.C  fst-compiler.h  fst-compiler.yy  fst-generate.cpp  fst-infl.cpp  fst-infl2-daemon.cpp  fst-infl2.C  fst-infl2.cpp  fst-infl3.cpp  fst-lattice.C  fst-lattice.cpp  fst-lowmem.cpp  fst-match.cpp  fst-mor.cpp  fst-parse.C  fst-parse.cpp  fst-parse2.C  fst-parse2.cpp  fst-print.cpp  fst-text2bin.cpp  fst-train.cpp  fst.C  fst.cpp  fst.h  generate.cpp  (+21 more)
src/man1/: fst-compiler.1
